--- a/style.css
+++ b/style.css
@@ -124,7 +124,8 @@ padding: 70px;
     justify-content: space-between;
     background-color: #3882f6;
     border: 100px solid white;
-    border-radius: 20px;
+    border-radius: 30px;
+    border-collapse: separate;
     padding: 80px 350px;
     color: white;
 }
@@ -144,6 +145,13 @@ padding: 70px;
     border: 3px solid white;
     font-size: 20px;
     font-weight: 900;
+}
+
+/*footer*/
+.footer {
+    text-align: center;
+    padding: 40px;
+    margin: 0;
 }
 
 ul {
